# cmake-qt5-socket-connector-small

./: .gitattributes  .gitignore  ADVISORY.md  ANALYSIS_JS_EMBEDDING_HISTORY.md  APPLICATION_VISION.md  BUILD_AND_RUN.md  BUILD_INSTRUCTIONS.md  BUILD_SUCCESS_SUMMARY.md  CHANGES_2025-10-01.md  CLEAN_INSTALL_WINDOWS.md  CMakeLists.txt  CMakelists.txt  COMPLETE_GRAPH_EXECUTION_RESULTS.md  CORE_ARCHITECTURE.md  COVERAGE_AUTOMATION_PLAN.md  CRASH_TEST_PLAN.md  CRASH_TEST_RESULTS.md  CURRENT_EVENT_ARCHITECTURE.md  CURRENT_SESSION_STATE.md  DELETE_KEY_ARCHITECTURE_FIX.md  EXECUTION_ORCHESTRATOR_CHECKPOINT.md  FACADE_MIGRATION_PLAN.md  GEOMETRY_CHANGE_DISCIPLINE_FIX.md  GRAPH_SPECIFICATION.md  ISSUE.md  JAVASCRIPT_INTEGRATION_ANALYSIS.md  LINUX_BUILD.md  LOGGING_SYSTEM_RESTORE.md  MANUAL_TESTING_CHECKLIST.md  MANUAL_TEST_POINTS.md  PERFORMANCE_OPTIMIZATION.md  PLAN.MD  PLANS.md  PLAN_VISA.md  PROGRAM_STRUCTURE_ANALYSIS.md  README.md  RULES.md  RUN_COMPLETE_GRAPH.md  SCRIPTING_CAPABILITIES.md  SESSION_CHECKPOINT.md  (+187 more)
backup_dragdrop/: concatenated_code.txt  node_palette_bar_working.h  node_tool_button.cpp  node_tool_button_working.h  simple_palette.cpp
code_compendium/: CMakelists.txt  build.sh  complete_code_compendium.txt  log.md
code_compendium_2025-07-17_07-46-05/: CMakelists.txt  complete_code_compendium.txt  log.md
code_compendium_2025-07-17_07-47-28/: CMakelists.txt  README_COMPENDIUM.md  build.bat  build.sh  complete_code_compendium.txt
compact_compendium/: README_COMPACT.md  compact_code_review.txt
coverage-html/: index.html
coverage-html/coverage/mnt/c/temp/cmake-qt5-socket-connector-small/: edge.cpp.html  edge.h.html  ghost_edge.cpp.html  ghost_edge.h.html  graph_controller.cpp.html  graph_controller.h.html  graph_factory.cpp.html  graph_observer.cpp.html  graph_observer.h.html  javascript_engine.cpp.html  layout_metrics.h.html  log_context.h.html  main.cpp.html  node.cpp.html  node.h.html  node_palette_widget.cpp.html  node_palette_widget.h.html  node_registry.cpp.html  node_registry.h.html  node_templates.cpp.html  qgraph.cpp.html  qgraph.h.html  scene.cpp.html  scene.h.html  socket.cpp.html  socket.h.html  view.cpp.html  window.cpp.html  window.h.html  xml_autosave_observer.cpp.html
ghidra/exports/: NIMax_decompiled.c
ghidra/exports/NIMax/: 00401050_FUN_00401050.c  00401080_FUN_00401080.c  00401090_FUN_00401090.c  004010e0_FUN_004010e0.c  0040111e_operator_delete.c  00401124_AfxSetModuleState.c  0040117d_FUN_0040117d.c  004011b0_FUN_004011b0.c  004011fd_FUN_004011fd.c  004012bd_FUN_004012bd.c  004012f6_find_pe_section.c  0040133a____scrt_acquire_startup_lock.c  0040136f____scrt_initialize_crt.c  004013a8____scrt_initialize_onexit_tables.c  0040143f____scrt_is_nonwritable_in_current_image.c  004014c9____scrt_release_startup_lock.c  004014e6____scrt_uninitialize_crt.c  0040150e___onexit.c  00401549__atexit.c  0040155e_FUN_0040155e.c  0040156c_FUN_0040156c.c  0040164d___scrt_common_main_seh.c  004017b5_entry.c  004017bf___security_check_cookie.c  004017d0___EH_epilog3.c  004017e5___EH_prolog3.c  00401820___SEH_prolog4.c  00401866___SEH_epilog4.c  004018da_FUN_004018da.c  004018fd____scrt_fastfail.c  00401a18____scrt_get_show_window_mode.c  00401a4b____scrt_is_managed_app.c  00401a8f_FUN_00401a8f.c  00401a9b_FUN_00401a9b.c  00401adc_guard_check_icall.c  00401ae2____isa_available_init.c  00401c7c_FUN_00401c7c.c  00401c80____scrt_is_ucrt_dll_in_use.c  00401c8c____security_init_cookie.c  00401d28_FUN_00401d28.c  (+53 more)
ghidra/exports/_gh_proj/NIResearch.rep/: project.prp  projectState
ghidra/exports/_gh_proj/NIResearch.rep/idata/: ~index.bak
ghidra/exports/_gh_proj/NIResearch.rep/idata/00/: 00000000.prp  00000001.prp  00000002.prp  00000003.prp  00000004.prp  00000005.prp  00000006.prp  00000007.prp  00000008.prp  00000009.prp  0000000a.prp  0000000b.prp  0000000c.prp  0000000d.prp  0000000e.prp  0000000f.prp
ghidra/exports/_gh_proj/NIResearch.rep/idata/00/~00000000.db/: db.1.gbf
ghidra/exports/_gh_proj/NIResearch.rep/idata/00/~00000001.db/: db.1.gbf
ghidra/exports/_gh_proj/NIResearch.rep/idata/00/~00000003.db/: db.1.gbf  db.2.gbf
ghidra/exports/_gh_proj/NIResearch.rep/idata/00/~00000004.db/: db.1.gbf
ghidra/exports/_gh_proj/NIResearch.rep/idata/00/~00000005.db/: db.1.gbf  db.2.gbf
ghidra/exports/_gh_proj/NIResearch.rep/idata/00/~00000006.db/: db.1.gbf
ghidra/exports/_gh_proj/NIResearch.rep/idata/00/~00000007.db/: db.1.gbf
ghidra/exports/_gh_proj/NIResearch.rep/idata/00/~00000008.db/: db.1.gbf
ghidra/exports/_gh_proj/NIResearch.rep/idata/00/~00000009.db/: db.1.gbf
ghidra/exports/_gh_proj/NIResearch.rep/idata/01/: 00000010.prp
ghidra/exports/_gh_proj/NIResearch.rep/user/: ~index.bak  ~journal.bak
ghidra/exports/_gh_proj/NIResearch.rep/user/00/: 00000000.prp  00000001.prp  00000002.prp  00000003.prp  00000004.prp  00000005.prp  00000006.prp  00000007.prp  00000008.prp  00000009.prp  0000000a.prp  0000000b.prp
lldb_scripts/: context_menu.lldb  context_menu.py  scripted_nodes.lldb
scpi/: emc_command_order.tsv  qemu_notes.md  vbox_notes.md  vxi11_script.js  vxi11_server.md
scpi/share/: scpi_server.cpp
scripts/: GRAPH_API.md  README.md  build-qt5.sh  cleanup_ghidra.ps1  collect_visa_binaries.ps1  complete_graph_test.js  complete_node_graph.js  construct_all_node_types.js  coverage_report.sh  coverage_scenario.js  create_fully_connected_graph.js  custom_nodes.js  debug_sockets.js  decompile_nimax.ps1  example_complete_graph.js  example_diamond_pattern.js  example_fan_in.js  example_fan_out.js  example_grid_pattern.js  example_simple_chain.js  example_stress_test.js  generate_graph.py  ghidra_env.ps1  ghidra_export_decomp.java  ghidra_find_visa_usage.java  ghidra_run_headless.ps1  ghidra_run_visa_usage.ps1  ghidra_save_archive_and_push.ps1  hello_world.js  inspect_visa_binaries.ps1  join_decompiled_c.ps1  lint_guard.sh  log_node_scripts.js  minimal_test.js  module_map.ps1  ni_visa_reset.ps1  node_algorithms.js  plan11_proc.js  script_check.js  scripted_node_demo.js  (+30 more)
shared/server/: scpi_core.cpp  scpi_core.hpp  vxi11core_client.c  vxi11core_server.c
(+21 files in other folders)
